# intell_quant2

./: README.md
intell_quant2/: .gitignore  README.md  check_columns.py  debug_exploration_stats.py  debug_path.py  debug_reward_drop.py  debug_reward_gap.py  deploy_and_run.sh  monitor_search.sh  pyproject.toml  requirements.txt  run_batch_test.py  run_exploration.py  stop_remote.sh
intell_quant2/data/A/: sh600000.duckdb  sh600004.duckdb  sh600008.duckdb  sh600009.duckdb  sh600010.duckdb  sh600011.duckdb  sh600012.duckdb  sh600015.duckdb  sh600016.duckdb  (+921 more)
intell_quant2/debug_workspace/: agent_debug.py  model_debug.py  stress_test.py  train_worker_debug.py
intell_quant2/evolution_search/: README.md  best_checkpoint.pth  env_es.py  es_engine.py  model_es.py  run_es_local.py
intell_quant2/exploring/: analyze_rewards.py  check_missing_features.py  debug_original_final.py  debug_original_logic.py  debug_weekly.py  evaluate.py  final_debug_weekly.py  single_process_test.py  verify_sync.py
intell_quant2/main/: download_data.py  run_backtest.py  run_examples.py
intell_quant2/preprocessing/: 01_generate_mock_daily.py  02_build_weekly_frames.py  03_batch_indicators.py  04_stream_indicators.py  05_compare_weekly_modes.py  06_backtest.py  06_bbiboll_band_backtest.py  07_rules_sweep.py  09_analyze_reward_stats.py  README.md  visualize_rules.py
intell_quant2/random_search/: run_search.py  train_worker.py
intell_quant2/scripts/: start_train.sh
intell_quant2/src/: __init__.py  aggregators.py  backtest.py  config.py  data_models.py  feature_env.py  pipelines.py
(+28 files in other folders)
