[project]
name = "intell-quant2"
version = "0.1.0"
description = "Status-aware backtesting toolkit with dual-mode indicators"
authors = [{name = ""}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ipykernel",
]
data = [
    "yfinance>=0.2.48",
    "akshare>=1.14.0",
    "duckdb>=1.1.0",
]
